<resources>
    <string name="app_name">Zalo Clone</string>

    <!-- Bottom Navigation -->
    <string name="nav_messages">Messages</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_profile">Profile</string>

    <!-- Contacts -->
    <string name="contacts_title">Contacts</string>
    <string name="action_create_group">Create Group</string>
    <string name="search_hint">Search messages, contacts…</string>
    <string name="empty_contacts">No contacts found.</string>
    <string name="empty_chats">No messages yet.\nStart a new conversation!</string>

    <!-- Selection -->
    <string name="selected_count_format">%1$d selected</string>
    <string name="selected_count_default">0 selected</string>
    <string name="prompt_group_name">Group name</string>
    <string name="title_create_group">Create a group</string>
    <string name="action_create_group_short">Create</string>
    <string name="error_group_name_required">Please enter a group name.</string>
    <string name="error_min_members">Select at least 2 members to create a group.</string>

    <!-- Chat -->
    <string name="members_count_format">%1$d members</string>
    <string name="chat_input_hint">Type a message…</string>
    <string name="send">Send</string>
    <string name="members_label">Members</string>
    <string name="group_info_title">Group Information</string>

    <!-- Actions -->
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="new_chat">New Chat</string>
    <string name="new_group">New Group</string>

    <!-- Delete Group -->
    <string name="delete_group_title">Delete Group</string>
    <string name="delete_group_message">Are you sure you want to delete \"%1$s\"? All messages will be deleted.</string>
    <string name="delete">Delete</string>

    <!-- Group Chat Menu -->
    <string name="action_view_members">View Members</string>
    <string name="action_add_member">Add Member</string>
    <string name="action_remove_member">Remove Member</string>
    <string name="action_change_nickname">Change Nickname</string>
    <string name="action_promote_member">Promote to Admin</string>
    <string name="action_edit_name">Edit Group Name</string>
    <string name="action_group_settings">Group Settings</string>
    <string name="select_member_to_add">Select member to add</string>
    <string name="select_member_to_remove">Select member to remove</string>
    <string name="group_name_updated">Group name updated</string>
    <string name="group_deleted">Group deleted</string>
    <string name="member_already_in_group">%1$s is already in this group</string>
    <string name="member_added_success">Added %1$s to group</string>
    <string name="member_removed_success">Removed %1$s from group</string>
    <string name="cannot_remove_last_member">Cannot remove the last member from group</string>
    <string name="no_contacts_available">No contacts available</string>
    <string name="group_settings_title">Group Settings</string>

    <string name="discover_title">Discover</string>
    <string name="discover_news">News</string>
    <string name="discover_trending">Trending</string>
    <string name="discover_hint">Explore what’s new today.</string>
    <string name="discover_empty">No content yet</string>
    <string name="discover_refresh">Refresh</string>
    <string name="discover_explore_more">Explore more</string>

    <string name="profile_avatar">Profile avatar</string>
    <string name="profile_name">John Doe</string>
    <string name="profile_email">john.doe@example.com</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="profile_logout">Log Out</string>
    <string name="profile_empty">No profile data available</string>

</resources>