<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_view_members"
        android:title="@string/action_view_members"
        android:icon="@android:drawable/ic_menu_view"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_member"
        android:title="@string/action_add_member"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove_member"
        android:title="@string/action_remove_member"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_nickname"
        android:title="@string/action_change_nickname"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_promote_member"
        android:title="@string/action_promote_member"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_group"
        android:title="@string/delete_group_title"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_group_settings"
        android:title="@string/action_group_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />

</menu>
